Bug 1877019 - Reflect user activation modifiers for keyboard event only if it likely activates a link or a link-like button. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D200202